Use lf-infra-pre-build for openstack & lftools
lf-infra-pre-build to pull in curated python packages commonly used
but several scripts.

Change-Id: I2ba675efb2558fc9db4c9d5c41b5263651ebf93d
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -166,7 +166,7 @@
       - timed: '0,30 * * * *'
 
     builders:
-      - odl-openstack-install
+      - lf-infra-pre-build
       # Servers
       - odl-openstack-cleanup-stale-stacks
       - odl-openstack-cleanup-stale-nodes
