Fix sonar property name
sonar.jacoco.reportPath is the correct property name, fix it,
so we get a proper override.

Change-Id: I186e179f71daa5cb39b84cf061285bb7297d21fd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/jjb/yangtools/yangtools.yaml
+++ b/jjb/yangtools/yangtools.yaml
@@ -86,7 +86,7 @@
       - gerrit-maven-sonar:
           mvn-params: >
             -Dodl.jacoco.aggregateFile=$WORKSPACE/target/jacoco.exec
-            -Dsonar.jacoco.reportPaths=$WORKSPACE/target/jacoco.exec
+            -Dsonar.jacoco.reportPath=$WORKSPACE/target/jacoco.exec
 
     project: 'yangtools'
     project-name: 'yangtools'
