Use lf-infra-pre-build for pulling in lftools
The lftools venv breaks the current version of the global-jjb shiplogs
script and causes UNSTABLE build.

Issue: RT 60958
Change-Id: I7bd943ea595bbdfde406c9a6059429cdec60cdc8
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -536,6 +536,7 @@
           forbidden-files: ''
 
     builders:
+      - lf-infra-pre-build
       - autorelease-checkout-gerrit-patch
       - autorelease-compare-projects
       - jacoco-nojava-workaround
