Add controller docs jobs
Change-Id: Ic5c2b184f586e8a94824b904e151a2973405a6b9
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/controller/controller.yaml
+++ b/jjb/controller/controller.yaml
@@ -4,6 +4,11 @@
     jobs:
       - '{project-name}-distribution-check-{stream}'
       - '{project-name}-maven-javadoc-jobs'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: controller
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-controller/48288/
+          rtd-token: b8440116c823a80c0fb0479eb7448a9196e6932f
       - odl-maven-jobs
 
     stream: neon
@@ -26,6 +31,11 @@
     jobs:
       - '{project-name}-distribution-check-{stream}'
       - '{project-name}-maven-javadoc-jobs'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: controller
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-controller/48288/
+          rtd-token: b8440116c823a80c0fb0479eb7448a9196e6932f
       - odl-maven-jobs
 
     stream: fluorine
