Add CSIT cluster missing trigger
Change-Id: I5827abc502c4ae04f931200d3ef8f00dab9bf131
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -531,6 +531,11 @@
           refspec: '$PATCHREFSPEC'
           branch: 'master'
 
+    triggers:
+      # we need this for not SR projects
+      - integration-csit-trigger:
+          jobs: '{trigger-jobs}'
+
     wrappers:
       - opendaylight-infra-wrappers:
           build-timeout: '{build-timeout}'
