fix blacklist job lists
- add dummy final line so we don't ignore the intended
  last line. see:
  https://lists.opendaylight.org/pipermail/integration-dev/2018-August/012428.html

- make sure 1cmb jobs are skipped as needed in all
  branches

Change-Id: If6178daef7665bbd6bed8bba7be8dbb66a3db934
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/jjb/integration/integration-test-jobs.yaml
+++ b/jjb/integration/integration-test-jobs.yaml
@@ -63,6 +63,7 @@
               netvirt-csit-1node-1cmb-0ctl-0cmp-openstack-pike
               netvirt-csit-1node-1cmb-0ctl-0cmp-openstack-queens-upstream-stateful-itm-direct
               netvirt-csit-3node-1cmb
+              last-line-is-ignored-so-we-need-something-dummy-here-to-make-sure-the-real-last-line-is-used
           csit-list: !include: csit-jobs-neon.lst
           csit-weekly-list: '{csit-weekly-list-neon}'
           csit-high-frequency-list: '{csit-high-frequency-list-neon}'
@@ -76,6 +77,7 @@
               netvirt-csit-1node-1cmb-0ctl-0cmp-openstack-pike
               netvirt-csit-1node-1cmb-0ctl-0cmp-openstack-queens-upstream-stateful-itm-direct
               netvirt-csit-3node-1cmb
+              last-line-is-ignored-so-we-need-something-dummy-here-to-make-sure-the-real-last-line-is-used
           csit-list: !include: csit-jobs-fluorine.lst
           csit-weekly-list: '{csit-weekly-list-fluorine}'
           csit-high-frequency-list: '{csit-high-frequency-list-fluorine}'
@@ -84,8 +86,11 @@
           csit-blacklist: >
               capwap centinel didm iotdm jsonrpc lacp messaging4transport netide nic
               ocpplugin sdninterfaceapp unimgr usecplugin gate longevity sanity tdd tempest wip
-              aaa-csit-1node-keystone-all
-              groupbasedpolicy-csit-1node-1cmb-0ctl-0cmp-openstack-pike-openstack
+              aaa-csit-1node-keystone-all groupbasedpolicy-csit-1node-1cmb-0ctl-0cmp-openstack-pike-openstack
+              netvirt-csit-1node-1cmb-0ctl-0cmp-openstack-pike
+              netvirt-csit-1node-1cmb-0ctl-0cmp-openstack-queens-upstream-stateful-itm-direct
+              netvirt-csit-3node-1cmb
+              last-line-is-ignored-so-we-need-something-dummy-here-to-make-sure-the-real-last-line-is-used
           csit-list: !include: csit-jobs-oxygen.lst
           csit-weekly-list: '{csit-weekly-list-oxygen}'
           csit-high-frequency-list: '{csit-high-frequency-list-oxygen}'
