--- a/jjb/integration/integration-test-jobs.yaml
+++ b/jjb/integration/integration-test-jobs.yaml
@@ -84,8 +84,10 @@
           csit-blacklist: >
               capwap centinel didm iotdm jsonrpc lacp messaging4transport netide nic
               ocpplugin sdninterfaceapp unimgr usecplugin gate longevity sanity tdd tempest wip
-              aaa-csit-1node-keystone-all
-              groupbasedpolicy-csit-1node-1cmb-0ctl-0cmp-openstack-pike-openstack
+              aaa-csit-1node-keystone-all groupbasedpolicy-csit-1node-1cmb-0ctl-0cmp-openstack-pike-openstack
+              netvirt-csit-1node-1cmb-0ctl-0cmp-openstack-pike
+              netvirt-csit-1node-1cmb-0ctl-0cmp-openstack-queens-upstream-stateful-itm-direct
+              netvirt-csit-3node-1cmb
           csit-list: !include: csit-jobs-oxygen.lst
           csit-weekly-list: '{csit-weekly-list-oxygen}'
           csit-high-frequency-list: '{csit-high-frequency-list-oxygen}'
