--- a/jjb/defaults.yaml
+++ b/jjb/defaults.yaml
@@ -90,7 +90,7 @@
     sm-features: ''
 
     # CSIT images configuration
-    openstack_system_image_queens: ZZCI - CentOS 7 - devstack-pike - 20180911-204227.544
+    openstack_system_image_queens: ZZCI - CentOS 7 - devstack-queens - 20180911-204058.666
     openstack_system_image_pike: ZZCI - CentOS 7 - devstack-pike - 20180911-204227.544
     stack-template: csit-2-instance-type.yaml
     docker_system_count: 1
