Use lf-infra-pre-build to pull in pip and setuptools
lf-infra-pre-build globally updates pip and setuptools for the
jenkins user. This allows us to simplify other scripts to not
have to do it as well.

Change-Id: I09f981a255d02bd4f574b2619073b94b419047a9
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -125,6 +125,7 @@
       - timed: '{cron}'
 
     builders:
+      - lf-infra-pre-build
       # force jenkins install of maven version before any shell scripts use it
       - lf-maven-install:
           mvn-version: '{mvn-version}'
