--- a/jjb/autorelease/autorelease-macros.yaml
+++ b/jjb/autorelease/autorelease-macros.yaml
@@ -53,10 +53,10 @@
     name: autorelease-determine-merge-order
     builders:
       - shell: |
+          #!/bin/bash -l
           virtualenv --system-site-packages $WORKSPACE/venv
           source $WORKSPACE/venv/bin/activate
           PYTHON="$WORKSPACE/venv/bin/python"
-          $PYTHON -m pip install --upgrade "pip<10.0.0" setuptools
           $PYTHON -m pip install --upgrade networkx
           $PYTHON -m pip freeze
           ./scripts/determine-merge-order.py
