Use lf-infra-pre-build to pull in pip and setuptools
lf-infra-pre-build globally updates pip and setuptools for the
jenkins user. This allows us to simplify other scripts to not
have to do it as well.

Change-Id: I09f981a255d02bd4f574b2619073b94b419047a9
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -125,6 +125,7 @@
       - timed: '{cron}'
 
     builders:
+      - lf-infra-pre-build
       # force jenkins install of maven version before any shell scripts use it
       - lf-maven-install:
           mvn-version: '{mvn-version}'
@@ -250,6 +251,7 @@
       - timed: '{obj:cron}'
 
     builders:
+      - lf-infra-pre-build
       # Fetch latest head of branch
       - shell: |
           git checkout $GERRIT_BRANCH
@@ -326,6 +328,7 @@
           jenkins-ssh-credential: opendaylight-jenkins-ssh
 
     builders:
+      - lf-infra-pre-build
       - autorelease-update-project-views
       - autorelease-update-validate-projects
       - lf-infra-push-gerrit-patch:
@@ -394,6 +397,7 @@
           jenkins-ssh-credential: opendaylight-jenkins-ssh
 
     builders:
+      - lf-infra-pre-build
       # force jenkins install of maven version before any shell scripts use it
       - maven-target:
           maven-version: mvn35
@@ -404,7 +408,6 @@
           global-settings-type: cfp
       - autorelease-cfp
       - shell: !include-raw-escape:
-          - ../global-jjb/shell/lftools-install.sh
           - version-bump.sh
 
     publishers:
@@ -468,6 +471,7 @@
                   branch-pattern: '**/{branch}'
 
     builders:
+      - lf-infra-pre-build
       - autorelease-generate-release-notes
 
     publishers:
