Add netconf docs jobs
Change-Id: I754a45775ed4af5a86ce271513c13d0536bde080
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/netconf/netconf.yaml
+++ b/jjb/netconf/netconf.yaml
@@ -3,6 +3,11 @@
     name: netconf-neon
     jobs:
       - '{project-name}-distribution-check-{stream}'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: netconf
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-netconf/48397/
+          rtd-token: aee2df909686ab7ba36f2ed08d90bdcf81f7b8dc
       - odl-maven-jobs
 
     stream: neon
@@ -24,6 +29,11 @@
     name: netconf-fluorine
     jobs:
       - '{project-name}-distribution-check-{stream}'
+      - '{project-name}-rtd-jobs':
+          build-node: centos7-builder-2c-2g
+          project-pattern: netconf
+          rtd-build-url: https://readthedocs.org/api/v2/webhook/odl-netconf/48397/
+          rtd-token: aee2df909686ab7ba36f2ed08d90bdcf81f7b8dc
       - odl-maven-jobs
 
     stream: fluorine
