openci: Change event publisher and selector
This change stops using JMS Messaging for publishing events
and switches to Python utility for publishing events created
by Yolanda.

Apart from switching to publisher, the filtering of events
is switched to selector instead of message fields due to issues
with the JSONPath.
These jobs will be used during ONS Europe session.

Change-Id: I0f8469a0d0ae1315c47e234ddfe083f1be5ae5a8
Signed-off-by: Fatih Degirmenci <fdegir@gmail.com>

--- a/jjb/openci/openci-odl-daily-jobs.yaml
+++ b/jjb/openci/openci-odl-daily-jobs.yaml
@@ -46,24 +46,10 @@
           description: 'The confidence level the published artifact gained'
 
     builders:
-      # first build step in the job executes create-ape.sh to construct the
-      # ArtifactPublishedEvent (ape)
+      # this build step in the job executes create-ape.sh to construct the
+      # ArtifactPublishedEvent (ape) and publishes it using the python utility
       - shell:
           !include-raw-escape: ./create-ape.sh
-      # constructed event gets injected into environment so JME Messaging
-      # plugin can publish the event and its properties in post-build step
-      - inject:
-          properties-file: "$WORKSPACE/event.properties"
-
-    publishers:
-      - jms-messaging:
-          provider-name: openci.activemq
-          msg-type: Custom
-          msg-props: |
-            type=$type
-            origin=$origin
-          msg-content:
-            $eventBody
 
 # This job gets triggered by a ConfidenceLevelModifiedEvent published
 # by OPNFV jobs so ODL can promote the autorelease artifact even further.
@@ -82,14 +68,7 @@
     triggers:
       - jms-messaging:
           provider-name: openci.activemq
-          selector: CI_TYPE = 'custom'
-          checks:
-            - field: origin
-              expected-value: 'OPNFV'
-            - field: type
-              expected-value: 'ConfidenceLevelModifiedEvent'
-            - field: scenario
-              expected-value: 'os-odl-nofeature'
+          selector: JMSType = 'ConfidenceLevelModifiedEvent' and JMSOrigin = 'OPNFV' and JMSScenario = 'os-odl-nofeature-ha'
 
     builders:
       - shell: |
