--- a/jjb/openci/openci-odl-daily-jobs.yaml
+++ b/jjb/openci/openci-odl-daily-jobs.yaml
@@ -45,6 +45,14 @@
           default: "'autorelease': 'SUCCESS'"
           description: 'The confidence level the published artifact gained'
 
+    wrappers:
+      - credentials-binding:
+          - username-password-separated:
+              credential-id: openci-connect-activemq
+              username: ACTIVEMQ_USER
+              password: ACTIVEMQ_PASSWORD
+      - workspace-cleanup
+
     builders:
       # this build step in the job executes create-ape.sh to construct the
       # ArtifactPublishedEvent (ape) and publishes it using the python utility
