Fix jenkins-init paths due to global-jjb v0.25.0
Change-Id: I09cdec27bdb15f5d9e6e0dd66311fdeb07452b64
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/openstack-hot/generic-server.yaml
+++ b/openstack-hot/generic-server.yaml
@@ -67,7 +67,9 @@ resources:
                     echo "Waiting until devvexx.opendaylight.org is resolvable..."
                 done
                 git clone --recurse-submodules git://devvexx.opendaylight.org/mirror/releng/builder /opt/ciman
-                /opt/ciman/jjb/global-jjb/jenkins-init-scripts/init.sh
+                /opt/ciman/global-jjb/jenkins-init-scripts/init.sh
+                # TODO: Remove this once global-jjb is patched to fix these script paths
+                ln -s /opt/ciman/global-jjb/jenkins-init-scripts /opt/ciman/jjb/global-jjb/jenkins-init-scripts
 
 outputs:
     ip:
