Fix openstack-cron missing lftools[openstack] dep
Change-Id: I523f4f6c3fff435d4538902b349dfcb62396b3b6
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -167,6 +167,9 @@
 
     builders:
       - lf-infra-pre-build
+      - shell: |
+          #!/bin/bash -l
+          pip install --user --upgrade lftools[openstack]~=0.17.1
       # Servers
       - odl-openstack-cleanup-stale-stacks
       - odl-openstack-cleanup-stale-nodes
