Sign odlparent artifacts with sigul
Change-Id: Ie97cc68dff0febdefce66d3aedb7899e4da8e2d5
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/odlparent/odlparent.yaml
+++ b/jjb/odlparent/odlparent.yaml
@@ -15,6 +15,7 @@
     mvn-settings: odlparent-settings
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
     mvn-version: mvn35
+    sign-artifacts: true
 
     dependencies: ''
     email-upstream: '[odlparent]'
@@ -44,6 +45,7 @@
 
     mvn-settings: odlparent-settings
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    sign-artifacts: true
 
     dependencies: ''
     email-upstream: '[odlparent]'
@@ -74,6 +76,7 @@
 
     mvn-settings: odlparent-settings
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    sign-artifacts: true
 
     dependencies: ''
     email-upstream: '[odlparent]'
@@ -104,6 +107,7 @@
 
     mvn-settings: odlparent-settings
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    sign-artifacts: true
 
     dependencies: ''
     email-upstream: '[odlparent]'
