--- a/jjb/yangtools/yangtools.yaml
+++ b/jjb/yangtools/yangtools.yaml
@@ -12,6 +12,7 @@
 
     mvn-settings: 'yangtools-settings'
     mvn-opts: '-Xmx1024m'
+    sign-artifacts: true
 
     dependencies: ''
     email-upstream: '[yangtools]'
@@ -39,6 +40,7 @@
 
     mvn-settings: 'yangtools-settings'
     mvn-opts: '-Xmx1024m'
+    sign-artifacts: true
 
     dependencies: ''
     email-upstream: '[yangtools]'
@@ -66,6 +68,7 @@
 
     mvn-settings: 'yangtools-settings'
     mvn-opts: '-Xmx1024m'
+    sign-artifacts: true
 
     dependencies: ''
     email-upstream: '[yangtools]'
