Enable aggregate sonar reports
odlparent-4.0.0 broke sonar badly, 4.0.1 will fix it, but we can
fix it independently by aggregating execution reports.

Change-Id: I62420b1f56f13a5e27c91693895138ccb9547ccc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/jjb/mdsal/mdsal.yaml
+++ b/jjb/mdsal/mdsal.yaml
@@ -123,7 +123,11 @@
 - project:
     name: mdsal-sonar
     jobs:
-      - gerrit-maven-sonar
+      - gerrit-maven-sonar:
+          mvn-params: >
+            -Dodl.jacoco.aggregateFile=$WORKSPACE/target/jacoco.exec
+            -Dsonar.jacoco.reportPath=$WORKSPACE/target/jacoco.exec
+
     project: 'mdsal'
     project-name: 'mdsal'
     branch: 'master'
