Remove duplicated parts from Ansible-ODL CI script
This patch moves the common parts of the Ansible-ODL CI scripts
into one script and adds each of the testing parts as separate
builder scripts.

JIRA: INTPAK-197

Change-Id: Ic9e887d3c52d1cb78b523b9e1de3f6430f59a18f
Signed-off-by: Taseer <taseer94@gmail.com>

--- a/jjb/packaging/ansible.yaml
+++ b/jjb/packaging/ansible.yaml
@@ -44,6 +44,7 @@
           build-timeout: '{build-timeout}'
 
     builders:
+      - shell: !include-raw: setup-ansible.sh
       - shell: !include-raw: test-ansible-rpm.sh
       - shell: !include-raw: test-ansible-odl-user.sh
       - shell: !include-raw: test-odl-logs.sh
