--- a/jjb/releng-views.yaml
+++ b/jjb/releng-views.yaml
@@ -34,6 +34,18 @@
     recurse: false
 
 - view:
+    name: '00-Empty View'
+    description: >
+      Empty job view. This is used as the default landing view to keep the
+      Jenkins UI responding better while a) under high load and b) when there
+      are a lot of jobs defined in the system'
+    view-type: list
+    filter-executors: false
+    filter-queue: false
+    recurse: false
+    regex: ''
+
+- view:
     name: 01-Recent
     regex: '.*'
     description: 'List of most recent jobs'
