--- a/jjb/packaging/ansible.yaml
+++ b/jjb/packaging/ansible.yaml
@@ -44,7 +44,7 @@
           build-timeout: '{build-timeout}'
 
     builders:
-      - shell: !include-raw: setup-ansible.sh
+      - shell: !include-raw: setup-ansible-rpm.sh
       - shell: !include-raw: test-ansible-rpm.sh
       - shell: !include-raw: test-ansible-odl-user.sh
       - shell: !include-raw: test-odl-logs.sh
