Add puppet-odl stable/fluorine jobs
These were missed in the version bump/branch cutting I guess. Jobs for
changes to stable/fluorine not running in pup-odl Gerrit.

Jira: INTPAK-205
Change-Id: Ia32ea419d2c1efa9839a18ecda2803f37c38661d
Signed-off-by: Daniel Farrell <dfarrell@redhat.com>

--- a/jjb/packaging/puppet.yaml
+++ b/jjb/packaging/puppet.yaml
@@ -13,6 +13,8 @@
     stream:
       - master:
           branch: 'master'
+      - fluorine:
+          branch: 'stable/fluorine'
       - oxygen:
           branch: 'stable/oxygen'
 
