--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1399,3 +1399,107 @@
       - email-notification:
           email-recipients: '{email-recipients}'
           email-prefix: '[{project}]'
+
+- job-template:
+    name: '{prefix}{project}-csit-1node-simple-{functionality}-{install}-{stream}'
+    id: inttest-csit-1node-simple
+    disable-job: false
+    disabled: '{disable-job}'
+
+    project-type: freestyle
+    node: centos7-robot-2c-8g
+    concurrent: true
+
+    properties:
+      - opendaylight-infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - opendaylight-infra-parameters:
+          os-cloud: '{os-cloud}'
+          project: 'integration/test'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-distribution-branch:
+          branch: '{branch}'
+      - integration-distribution-stream:
+          stream: '{stream}'
+      - integration-bundle-url:
+          bundle-url: '{bundle-url}'
+      - integration-repo-url:
+          repo-url: '{repo-url}'
+      - integration-controller-scope:
+          controller-scope: '{scope}'
+      - integration-controller-features:
+          controller-features: '{install-features}'
+      - integration-controller-debug-map:
+          controller-debug-map: '{debug-map}'
+      - integration-test-options:
+          test-options: '{robot-options}'
+      - integration-script-plan:
+          script-plan: '{scriptplan}'
+      - integration-config-plan:
+          config-plan: '{configplan}'
+      - integration-stream-test-plan:
+          stream-test-plan: '{streamtestplan}'
+      - integration-test-plan:
+          test-plan: '{testplan}'
+      - integration-test-suites:
+          test-suites: '{test-suites}'
+      - integration-patch-refspec:
+          branch: 'master'
+      - integration-jdk-version:
+          jdkversion: '{jre}'
+      - distribution-karaf-version:
+          karaf-version: '{karaf-version}'
+      - integration-use-features-boot:
+          use-features-boot: 'True'
+
+    scm:
+      - integration-gerrit-scm:
+          basedir: 'test'
+          refspec: '$PATCHREFSPEC'
+          branch: 'master'
+
+    triggers:
+      # we need this for not SR projects
+      - integration-csit-trigger:
+          jobs: '{trigger-jobs}'
+
+    wrappers:
+      - opendaylight-infra-wrappers:
+          build-timeout: '{build-timeout}'
+
+    builders:
+      - lf-infra-pre-build
+      - integration-infra-stack:
+          stack-template: '{stack-template}'
+          vm_0_count: '1'
+          vm_0_flavor: '{odl_system_flavor}'
+          vm_0_image: '{odl_system_image}'
+          vm_1_count: '{tools_system_count}'
+          vm_1_flavor: '{tools_system_flavor}'
+          vm_1_image: '{tools_system_image}'
+      - integration-install-robotframework
+      - inject:
+          properties-file: 'env.properties'
+      - integration-get-slave-addresses
+      - inject:
+          properties-file: 'slave_addresses.txt'
+      - integration-detect-variables
+      - integration-install-common-functions
+      - integration-deploy-simple-controller-run-test
+      - integration-cleanup-tmp
+
+    publishers:
+      - integration-robot:
+          unstable-if: 0.0
+          pass-if: 100.0
+      - email-notification:
+          email-recipients: '{email-recipients}'
+          email-prefix: '[{project}]'
+      - integration-csit-archive-build
+      - integration-csit-run-postscript
+      - releng-openstack-stack-delete
+      - lf-infra-publish
