Change multipatch build order
As suggested in https://lists.opendaylight.org/pipermail/
integration-dev/2018-October/012610.html

Change-Id: Ieb51385c751160de720dca2c75f23ce1199ad1d5
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/integration/integration-test-jobs.yaml
+++ b/jjb/integration/integration-test-jobs.yaml
@@ -24,8 +24,8 @@
           csit-list: !include: csit-jobs-neon.lst
           build-order: >
               odlparent yangtools infrautils mdsal controller serviceutils aaa netconf
-              daexim bgpcep ovsdb neutron lispflowmapping openflowplugin coe genius sfc
-              netvirt
+              daexim ovsdb neutron openflowplugin coe genius lispflowmapping sfc netvirt
+              bgpcep
 
       - fluorine:
           branch: 'stable/fluorine'
@@ -33,8 +33,8 @@
           csit-list: !include: csit-jobs-fluorine.lst
           build-order: >
               odlparent yangtools infrautils mdsal controller serviceutils aaa netconf
-              daexim bgpcep ovsdb neutron lispflowmapping openflowplugin coe genius sfc
-              netvirt
+              daexim ovsdb neutron openflowplugin coe genius lispflowmapping sfc netvirt
+              bgpcep
 
       - oxygen:
           branch: 'stable/oxygen'
@@ -42,8 +42,8 @@
           csit-list: !include: csit-jobs-oxygen.lst
           build-order: >
               odlparent yangtools infrautils mdsal controller serviceutils aaa netconf
-              daexim bgpcep ovsdb neutron lispflowmapping openflowplugin coe genius sfc
-              netvirt
+              daexim ovsdb neutron openflowplugin coe genius lispflowmapping sfc netvirt
+              bgpcep
 
 - project:
     name: integration-distribution
