Fix netconf scale test
Scale test will run as -only- feature.

Change-Id: Ia79a8c6365fbe8782a723c16f90ff5b4202cd61b
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/netconf/netconf-scale.yaml
+++ b/jjb/netconf/netconf-scale.yaml
@@ -20,8 +20,8 @@
           branch: 'stable/oxygen'
 
     install:
-      - all:
-          scope: 'all'
+      - only:
+          scope: 'only'
 
     # Features to install
     install-features: >
