Add become true to run the cmd as root user
Change-Id: I35f4672decfe223ff3d650298529dff3aea16797
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/packer/provision/local-builder.yaml
+++ b/packer/provision/local-builder.yaml
@@ -72,6 +72,7 @@
                     --slave "/usr/bin/javah" "javah" "/opt/jdk-{{openjdk11_version}}/bin/javah" \
                     --slave "/usr/bin/javap" "javap" "/opt/jdk-{{openjdk11_version}}/bin/javap" \
                     --slave "/usr/bin/javaws" "javaws" "/opt/jdk-{{openjdk11_version}}/bin/javaws"'
+          become: true
     - name: Install Cassandra Server
       block:
         - name: 'Fetch Cassandra Server to /tmp/apache-cassandra-{{cassandra_version}}-bin.tar.gz'
