Adjust SM CSIT to use common distribution
This way there is no need to specify feature repo version.

Change-Id: I1b4a374821e8d494eef9ed1a41fa8fda87319108
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/tsdr/tsdr-csit-cassandra.yaml
+++ b/jjb/tsdr/tsdr-csit-cassandra.yaml
@@ -15,11 +15,16 @@
     stream:
       - neon:
           branch: 'master'
+          trigger-jobs: '{project}-merge-{stream}'
+          karaf-version: 'odl'
+          # yamllint disable-line rule:line-length
+          repo-url: 'mvn:org.opendaylight.tsdr/features-tsdr//xml/features'
       - fluorine:
           branch: 'stable/fluorine'
           trigger-jobs: '{project}-merge-{stream}'
+          karaf-version: 'odl'
           # yamllint disable-line rule:line-length
-          repo-url: 'mvn:org.opendaylight.tsdr/features-tsdr/1.6.0-SNAPSHOT/xml/features'
+          repo-url: 'mvn:org.opendaylight.tsdr/features-tsdr//xml/features'
       - oxygen:
           branch: 'stable/oxygen'
 
